deployment/inventory_service-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service
  namespace: fetch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-service
  template:
    metadata:
      labels:
        app: inventory-service
    spec:
      containers:
        - name: inventory-service
          image: public.ecr.aws/y8s9k2z4/edu.fivecolleges.libraries.fetch/inventory-service
