deployment/inventory_service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: fetch
spec:
  selector:
    app: inventory-service
  ports:
    - name: http
      targetPort: 80
      port: 80
